--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
+
 .App {
+  /* border: 2px solid black; */
+  border-radius: 10px;
+  width: 50%;
+  margin-left: 25%;
+}
+
+.header {
   text-align: center;
+  font-size: 60px;
+}
+/*
+.mainbody {
+  margin-left: 5px;
+} */
+.textbar {
+  width: 80%;
+  box-sizing: border-box;
+  padding: 15px;
+  margin-right: 15px;
+  margin-left: 5px;
+  border: 0;
+  border-radius: 10px;
+  box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+  font-size: 20px;
+}
+.submit-btn {
+  padding:15px;
+  border:none;
+  background-color:#3F51B5;
+  color:#fff;
+  font-size: 20px;
+  font-weight:600;
+  border-radius:5px;
+  width: 120px;
+  margin-bottom: 30px;
+}
+.todoitem {
+  font-size: 20px;
+  font-weight: 500;
+  padding: 10px;
+  /* margin-left: 15px; */
+  border: 0;
+  border-radius: 10px;
+  width: 75%;
+  background-color: #3F51B5;
+  color: #fff;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+input[type=checkbox] {
+  -webkit-transform: scale(1.4); 
+}
+.task-done {
+  padding-left: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.checkbox-container input:checked ~ .task-done {
+  text-decoration: line-through;
 }
